# ic-alloy-toolkit

./: .gitignore  README.md
.devcontainer/: devcontainer.json
src/backend/: Cargo.toml  backend.did
src/backend/abi/: DAO.json
src/backend/src/: lib.rs
src/backend/src/service/: get_balance_usdc.rs  mod.rs  send_eth.rs  transfer_usdc.rs  use_vaults.rs
src/frontend/: routeTree.gen.ts
src/frontend/routes/: __root.tsx  index.lazy.tsx
