[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
getrandom = { version = "0.2.15", features = ["custom"] }
rand_chacha = { version = "0.3.1" }
ic-cdk-timers = "0.10.0"
ic-cdk-macros = "0.6.1"
ic-stable-structures = "0.5"
aes-gcm = "0.10"
hex = "0.4"
tiny-keccak = { version = "2.0", features = ["keccak"] }
libsecp256k1 = "0.7"
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"

# Use local clone of `ic-alloy`
# alloy = { path = "../../../ic-alloy/crates/alloy", default-features = false, features = [
#   "icp",
#   "sol-types",
#   "json",
#   "contract",
# ] }

# Use `ic-alloy` hosted on GitHub. `ic-alloy` is not deployed to crates.io yet
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.0", default-features = false, features = [
  "icp",
  "sol-types",
  "json",
  "contract",
] }
